project('aoc-2022', 'cpp', default_options : ['cpp_std=c++20'])
executable('01', '01/main.cpp')
executable('02', '02/main.cpp')
executable('03', '03/main.cpp')
executable('04', '04/main.cpp')
executable('05', '05/main.cpp')
executable('06', '06/main.cpp')
executable('07', '07/main.cpp')
executable('08', '08/main.cpp')
executable('09', '09/main.cpp')
executable('10', '10/main.cpp')
executable('11', '11/main.cpp')
executable('12', '12/main.cpp')
